add new source to event registration
