# docs/swagger.yaml
@@ -91,6 +91,22 @@ definitions:
         example: invalid-event-id
         type: string
     type: object
+  dto.EventRegistrationDTO:
+    properties:
+      news_sources:
+        example:
+        - facebook
+        - instagram
+        - faculty
+        - chula-student
+        - friend
+        - parent
+        - school
+        - other
+        items:
+          type: string
+        type: array
+    type: object
   dto.Faculty:
     properties:
       code:
@@ -594,6 +610,12 @@ paths:
         name: scheduleId
         required: true
         type: integer
+      - description: Event register body
+        in: body
+        name: registerEventDto
+        required: true
+        schema:
+          $ref: '#/definitions/dto.EventRegistrationDTO'
       produces:
       - application/json
       responses: {}
